--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <div class="container mt-5">
         <div class="row">
             <div class="col-sm-8 offset-sm-2">
-                <form id="userForm">
+                <form id="lessonForm">
                     <div class="mb-3">
-                        <label for="username" class="form-label">Ders</label>
-                        <input type="text" class="form-control" name="username" id="username">
+                        <label for="lessonname" class="form-label">Ders</label>
+                        <input type="text" class="form-control" name="lessonname" id="lessonname">
                     </div>
                     <div class="mb-3">
                         <label for="score" class="form-label">Not</label>
@@ -36,11 +36,8 @@
                 </form>
             </div>
             <div class="col-sm-8 offset-sm-2 mt-4">
-                <ul class="list-group" id="userList">
-                    <!-- <li class="list-group-item d-flex justify-content-between align-items-center">
-                        A list item
-                        <span class="badge bg-primary rounded-pill">14</span>
-                    </li> -->
+                <ul class="list-group" id="lessonList">
+
 
                 </ul>
             </div>
